app/assets/tailwind/application.css
/* ... */
@utility collapsed {
  &.layout-body {
    grid-template-columns: 0 1fr;
  }
}

@utility sidebar {
  grid-template-areas: "navigation" "collapse";
  grid-template-rows: 1fr 40px;
  overflow-x: hidden;
}

@utility navbar-button {
  @apply focus:outline-hidden rounded-md p-1 text-sm text-slate-500 hover:bg-slate-300 focus:ring-4 focus:ring-slate-200 dark:text-slate-400 dark:hover:bg-slate-700 dark:focus:ring-slate-700;

  & button.viral-dropdown--icon {
    @apply focus:outline-hidden rounded-md p-1 text-sm text-slate-500 hover:bg-slate-300 focus:ring-4 focus:ring-slate-200 dark:text-slate-400 dark:hover:bg-slate-700 dark:focus:ring-slate-700;
  }
}

@utility viral-dropdown--icon {
  & button.navbar-button {
    @apply focus:outline-hidden rounded-md p-1 text-sm text-slate-500 hover:bg-slate-300 focus:ring-4 focus:ring-slate-200 dark:text-slate-400 dark:hover:bg-slate-700 dark:focus:ring-slate-700;
  }
  @apply focus:outline-hidden rounded-md p-2.5 text-sm text-slate-500 hover:bg-slate-100 focus:ring-4 focus:ring-slate-200 dark:text-slate-400 dark:hover:bg-slate-700 dark:focus:ring-slate-700;
}

@utility link {
  @apply font-medium text-green-600 hover:underline dark:text-green-500;
}

@utility card {
  @apply shadow-xs rounded-md border border-slate-200 bg-slate-50 p-4 sm:p-6 dark:border-slate-700 dark:bg-slate-800;
}
/* ... */

